<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_profile"
        android:icon="@drawable/ic_baseline_profile_filled_white"
        android:orderInCategory="100"
        android:title="@string/profile"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="100"
        android:title="@string/refresh"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/logout"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_test"
        android:orderInCategory="100"
        android:title="@string/test"
        app:showAsAction="never" />
</menu>
