<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/dp_10"
    android:layout_marginEnd="@dimen/dp_10"
    app:cardBackgroundColor="@color/colorWhite"
    app:cardCornerRadius="@dimen/corner_radius"
    app:cardUseCompatPadding="false"
    tools:ignore="ContentDescription">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dp_20">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_mobile_number"
            android:textSize="@dimen/size_20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvMobilePrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="?android:attr/selectableItemBackground"
                android:padding="@dimen/dp_20"
                android:text="@string/mobile"
                android:textSize="@dimen/size_18sp"
                tools:ignore="UnusedAttribute" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_height"
                android:background="@color/colorDivider"
                android:contentDescription="@string/divider" />

            <TextView
                android:id="@+id/tvMobileSecondary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="?android:attr/selectableItemBackground"
                android:padding="@dimen/dp_20"
                android:text="@string/mobile_secondary"
                android:textSize="@dimen/size_18sp"
                tools:ignore="UnusedAttribute" />

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>